=== Opus Primus changelog.txt ===
Last revised April 1, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2 ==
* Released ...

= Code =
* Added filtered `comment_form_required_field_glyph` method in Comments class
* Changed post thumbnail on pages to full size image and align to the center
* Changed comment fields into an unordered list
* Changed `meta-byline` container from `div` to `h3` (adjusted CSS as needed)
* Changed `meta-tags` container from `p` to `h3` (adjusted CSS as needed)
* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`

= CSS =
* Added styles for comment form fields
* Added more specific selector used with .post.format-link
* Address both class and id usage for the sidebar search form
* Adjusted widths of comment form elements
* Sorted out the adaptive layout for screens less than 480px wide

= JavaScript =
* Added more specific selector used with .post.format-link when adding .link-symbol class

= Stanzas =
* PullQuotes - Added 'pullquotes-readme.txt' file
* PullQuotes - Added left-side placement with new `to` parameter
* Taglines - Added 'taglines-readme.txt' file
* THA - Added 'tha-readme.txt' file

= Miscellaneous =
* Minor changes to text tense used in 'changelog.txt'
* Updated 'hooks-actions.txt'
* Updated 'hooks-filters.txt'
* Updated 'readme.txt' FAQ - What is the difference between how the "Featured Image" is used on a post and how it is used on a page?
* Updated 'readme.txt' FAQ - What are Stanzas?

/** ------------------------------------------------------------------------- */
== Version 1.1.1 ==
* Released March 2013

= Code =
* Added `all_comments_count` and `show_all_comments_count` methods to Comments class to be used in the 'comments.php' template when displaying total comments
* General minor code refactorings and improvements
* Moved `comments only tab`, `pingbacks only tab` and `trackbacks only tab` functionality into Comments class methods