@@ -9,7 +9,7 @@
     </list>
     <ignored path="opus-primus.iws" />
     <ignored path=".idea/workspace.xml" />
-    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365428034481" ignored="false" />
+    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365445804270" ignored="false" />
     <file path="/a.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363106901363" ignored="false" />
     <file path="/a.html" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363107087453" ignored="false" />
     <file path="/a.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363107067982" ignored="false" />
@@ -21,7 +21,7 @@
     <file path="/opus-primus.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364845246226" ignored="false" />
     <file path="/comments.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364315354819" ignored="false" />
     <file path="/functions.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364401679699" ignored="false" />
-    <file path="/changelog.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364921077651" ignored="false" />
+    <file path="/changelog.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365445861013" ignored="false" />
     <file path="/opus-primus-comment-tabs.js" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363621396915" ignored="false" />
     <file path="/readme.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364840408820" ignored="false" />
     <file path="/style.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363798136092" ignored="false" />
@@ -45,7 +45,7 @@
     <file path="/opus-primus.js" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364841470955" ignored="false" />
     <file path="/a.dummy" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365173421117" ignored="false" />
     <file path="/DummyFile.xpath" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364917349406" ignored="false" />
-    <file path="/hooks-filters.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365428026046" ignored="false" />
+    <file path="/hooks-filters.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365445667561" ignored="false" />
     <file path="/stanzas.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365171811369" ignored="false" />
     <file path="/add-new-stanza.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365168955809" ignored="false" />
     <file path="/class.OpusPrimusNewStanza.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365167907050" ignored="false" />
@@ -53,7 +53,7 @@
     <file path="/new-stanza.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365173181819" ignored="false" />
     <file path="/class.OpusPrimusNewCustomCustomStanza.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365173462289" ignored="false" />
     <file path="/new-custom-stanza.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365177742134" ignored="false" />
-    <file path="/class.OpusPrimusPosts.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365426786878" ignored="false" />
+    <file path="/class.OpusPrimusPosts.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1365445349860" ignored="false" />
     <option name="TRACKING_ENABLED" value="true" />
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -73,40 +73,31 @@
   </component>
   <component name="FileEditorManager">
     <leaf>
-      <file leaf-file-name="class.OpusPrimusPosts.php" pinned="false" current="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusPosts.php">
-          <provider selected="true" editor-type-id="text-editor">
-            <state line="510" column="0" selection-start="19343" selection-end="19343" vertical-scroll-proportion="-7.1923075">
-              <folding>
-                <element signature="e#6#1596#0" expanded="true" />
-              </folding>
-            </state>
-          </provider>
-        </entry>
-      </file>
       <file leaf-file-name="hooks-filters.txt" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/documentation/hooks-filters.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="48" column="31" selection-start="1581" selection-end="1581" vertical-scroll-proportion="0.0">
+            <state line="50" column="8" selection-start="1635" selection-end="1635" vertical-scroll-proportion="0.0">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
+      <file leaf-file-name="changelog.txt" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="13" column="72" selection-start="609" selection-end="609" vertical-scroll-proportion="0.25847954">
+            <state line="9" column="0" selection-start="260" selection-end="260" vertical-scroll-proportion="0.0">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="class.OpusPrimusAuthors.php" pinned="false" current="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusAuthors.php">
+      <file leaf-file-name="class.OpusPrimusPosts.php" pinned="false" current="true" current-in-tab="true">
+        <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusPosts.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="160.34616">
-              <folding />
+            <state line="416" column="83" selection-start="15426" selection-end="15426" vertical-scroll-proportion="0.43063933">
+              <folding>
+                <element signature="e#6#1596#0" expanded="true" />
+              </folding>
             </state>
           </provider>
         </entry>
@@ -141,10 +132,10 @@
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusComments.php" />
         <option value="$PROJECT_DIR$/functions.php" />
         <option value="$PROJECT_DIR$/index.php" />
-        <option value="$PROJECT_DIR$/includes/class.OpusPrimusStructures.php" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusPosts.php" />
         <option value="$PROJECT_DIR$/documentation/hooks-filters.txt" />
         <option value="$PROJECT_DIR$/changelog.txt" />
+        <option value="$PROJECT_DIR$/includes/class.OpusPrimusStructures.php" />
       </list>
     </option>
   </component>
@@ -1876,7 +1867,11 @@
       <created>1365427679160</created>
       <updated>1365427679161</updated>
     </task>
-    <option name="localTasksCounter" value="360" />
+    <task id="LOCAL-00360" summary="* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`">
+      <created>1365428062296</created>
+      <updated>1365428062296</updated>
+    </task>
+    <option name="localTasksCounter" value="361" />
     <servers>
       <GitHub shared="false">
         <commitMessageFormat>{id} {summary}</commitMessageFormat>
@@ -1982,7 +1977,7 @@
     <option name="WRAP_WHEN_TYPING_REACHES_RIGHT_MARGIN" value="false" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Code clean-up (removed todo items)&#10;* Added individual filters for anchor, date, time, and author elements&#10;* Updated 'hooks-filters.txt'" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="false" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -1996,7 +1991,6 @@
     <option name="UPDATE_FILTER_BY_SCOPE" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="* Update to working version 1.2-alpha" />
     <MESSAGE value="* Moved `pingbacks only panel` and `trackbacks only panel` functionality into Comments class as methods" />
     <MESSAGE value="* Moved `comments only tab`, `pingbacks only tab` and `trackbacks only tab` functionality into Comments class as a methods" />
     <MESSAGE value="* Moved global variables call inside conditional statement as they are not needed if we do not have comments.&#10;* General minor code refactorings and improvements" />
@@ -2021,6 +2015,7 @@
     <MESSAGE value="* Code refactoring - changed double-quotes to single-quote" />
     <MESSAGE value="* i18n corrections" />
     <MESSAGE value="* Code clean-up (removed todo items)&#10;* Added individual filters for anchor, date, time, and author elements&#10;* Updated 'hooks-filters.txt'" />
+    <MESSAGE value="* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
@@ -2086,15 +2081,6 @@
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="748" column="3" selection-start="28062" selection-end="28062" vertical-scroll-proportion="0.8492647">
-          <folding>
-            <element signature="e#6#1618#0" expanded="true" />
-          </folding>
-        </state>
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/functions.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="113" column="0" selection-start="5026" selection-end="5026" vertical-scroll-proportion="0.20343137">
@@ -2104,31 +2090,40 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusAuthors.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="160.34616">
+        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="-5.0289507">
           <folding />
-        </state>
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusPosts.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="510" column="0" selection-start="19343" selection-end="19343" vertical-scroll-proportion="-7.1923075">
-          <folding>
-            <element signature="e#6#1596#0" expanded="true" />
-          </folding>
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/documentation/hooks-filters.txt">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="48" column="31" selection-start="1581" selection-end="1581" vertical-scroll-proportion="0.0">
+        <state line="50" column="8" selection-start="1635" selection-end="1635" vertical-scroll-proportion="0.0">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/changelog.txt">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="13" column="72" selection-start="609" selection-end="609" vertical-scroll-proportion="0.25847954">
+        <state line="9" column="0" selection-start="260" selection-end="260" vertical-scroll-proportion="0.0">
           <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusStructures.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="748" column="3" selection-start="28062" selection-end="28062" vertical-scroll-proportion="0.877451">
+          <folding>
+            <element signature="e#6#1618#0" expanded="true" />
+          </folding>
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/includes/class.OpusPrimusPosts.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="416" column="83" selection-start="15426" selection-end="15426" vertical-scroll-proportion="0.43063933">
+          <folding>
+            <element signature="e#6#1596#0" expanded="true" />
+          </folding>
         </state>
       </provider>
     </entry>
